develop todolist with styles

--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,11 @@
   border-radius: 5px;
   padding: 4px;
 }
+
+.todo {
+  display: flex;
+  justify-content: space-between;
+    align-items: center;
+    width: 20rem;
+    margin: 10px 0;
+}
