--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,42 @@ input {
   border-radius: 5px;
   padding: 5px 3px;
   outline: none;
+  width: 200px;
 }
 
 input:focus {
-  border: 1px solid blueviolet;
+  border: 2px solid blueviolet;
+}
+
+.formControl {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 20rem;
+  margin-bottom: 20px;
+}
+
+.button {
+  color:#6d28d9;
+  background-color: #fff;
+  border: 1px solid #6d28d9;
+  border-radius: 5px;
+  outline: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.remove{
+  color: rgb(236, 68, 68);
+  border: 1px solid rgb(236,68,68);
+  margin-left: 10px;
+}
+
+.addTodo {
+  color:#fff;
+  background-color:#6d28d9;
+}
+
+.updateTodo {
+  background-color: #9f75e2 ;
 }
