--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@
     margin: 10px 0;
 }
 
+.todoText{
+  cursor: pointer;
+  font-weight: bold;
+}
+
 .completed {
   text-decoration: line-through;
   color: #ccc;
@@ -78,4 +83,24 @@ input:focus {
 
 .updateTodo {
   background-color: #9f75e2 ;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+header span {
+  margin-right: 20px;
+  display: inline-block;
+  width: 20px;
+  font-size: 14px;
+  height: 20px;
+  background-color: #d0c7f7;
+  color: #6d28d9;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
